--- a/etude.html
+++ b/etude.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>cv profisionelle barcha </title>
+<title>hello cv </title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
 
    <div>
   <ul>
-    <li><p>bacalaureat en lycée éthatique section science exp montion bien année 2021 </p> </li>
-    <li><p>cycle préparatoire section pc admise au concours national année 2023 </p> </li>
+    <li><p>bacalaureat en lycée technique mahmoud messadi nabeul section technique exp mention bien année 2020 </p> </li>
+    <li><p>Licence en genie electrique iset nabeul </p> </li>
     <li><p>cycle d'ingenieure à esprit en génie informatique </p> </li>
     <li><p>Cours axes sur la programmation, les bases de données, et la conception logicielle </p> </li>
 
