--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>cv profisionelle barcha </title>
+<title>hello cv </title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
